<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".flow.DashboardFragment">

    <data>
        <variable
            name="user"
            type="br.com.mdr.testeandroid.model.business.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="@dimen/margin16"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnSignOut"
                android:contentDescription="@string/image_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:text="@{user.name}"
                android:textColor="@color/white"
                android:textSize="@dimen/text25"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSignOut"
                tools:text="José Carlos da Silva"/>

            <TextView
                android:id="@+id/txtAccountDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_marginTop="@dimen/margin28"
                android:text="@string/dashboard_account"
                android:textColor="@color/white"
                android:textSize="@dimen/text12"
                app:layout_constraintTop_toBottomOf="@id/txtUserName"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtUserAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:text="@{user.bankAccount}"
                android:textColor="@color/white"
                android:textSize="@dimen/text25"
                app:layout_constraintTop_toBottomOf="@id/txtAccountDescription"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="250 / 01.114.234-3"/>

            <TextView
                android:id="@+id/txtBalanceDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin21"
                android:text="@string/dashboard_balance"
                android:textColor="@color/white"
                android:textSize="@dimen/text12"
                app:layout_constraintTop_toBottomOf="@id/txtUserAccount"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtUserBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:text="@{user.name}"
                android:textColor="@color/white"
                android:textSize="@dimen/text25"
                app:layout_constraintTop_toBottomOf="@id/txtBalanceDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSignOut"
                tools:text="R$ 2.500,00"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtRecentsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/dashboard_recents"
            android:textColor="@color/gray485465"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerStatements"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/txtRecentsDescription"
            tools:listitem="@layout/dashboard_statement_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>